2006-01-16  Henrique Romano  <henrique@async.com.br>

	reviewed by: Evandro Vale Miquelito <evandro@async.com.br>

	* stoqdrivers/constants.py:
	* stoqdrivers/devices/base.py:
	* stoqdrivers/devices/printers/base.py:
	* stoqdrivers/devices/scales/base.py:
	* stoqdrivers/devices/scales/scales.py:

	BaseDevice implementation and code update, fix bug #2386
	
2006-01-10  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin <jdahlin@async.com.br>>

	* stoqdrivers/constants.py:
	* stoqdrivers/devices/printers/bematech/MP25.py:
	* stoqdrivers/devices/printers/daruma/FS345.py:
	* stoqdrivers/devices/printers/dataregis/EP375.py:
	* stoqdrivers/devices/printers/fiscal.py:
	* stoqdrivers/devices/printers/interface.py:
	* stoqdrivers/devices/printers/perto/Pay2023.py:
	* stoqdrivers/devices/printers/sweda/IFS9000I.py:
	* stoqdrivers/devices/printers/virtual/Simple.py:

	Fix for bug #2383: Implements support for product's 
	custom unit.

2006-01-10  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin <jdahlin@async.com.br>

	* stoqdrivers/devices/printers/bematech/MP25.py:
	* stoqdrivers/devices/printers/daruma/FS345.py:
	* stoqdrivers/devices/printers/dataregis/EP375.py:
	* stoqdrivers/devices/printers/fiscal.py:
	* stoqdrivers/devices/printers/interface.py:
	* stoqdrivers/devices/printers/perto/Pay2023.py:
	* stoqdrivers/devices/printers/sweda/IFS9000I.py:

	Fix for bug #2362: close_coupon method must return
	the COO (operation order counter).

2006-01-06  Henrique Romano  <henrique@async.com.br>

	reviewed by: Johan Dahlin <jdahlin@async.com.br>

	* stoqdrivers/devices/printers/bematech/MP25.py:
	* stoqdrivers/devices/serialbase.py:

	Implements support for Bematech's extended protocol.

2006-01-04  Henrique Romano  <henrique@async.com.br>

	* stoqdrivers/devices/scales/interface.py:
	* stoqdrivers/devices/scales/toledo/PrixIII.py:
	* stoqdrivers/exceptions.py:

	Initial support for Toled Prix III scale (fix bug #2369)
